--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-@font-face {
-  src: url('../fonts/MarineCorpsPersonalUsed-ax9Mo.otf');
-  font-family: 'War Style';
-}
-
 #main__page {
   background-image: url('../assets/main/main_background.jpg');
   background-repeat: no-repeat;
@@ -15,16 +10,16 @@
 #main__page > #main__page--wrapper {
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   width: 100vw;
 }
 
 #main__page > #main__page--wrapper > #main__page--wrapper--section {
   background-color: rgba(0, 0, 0, 0.8);
-  font-family: 'War Style';
+  font-family: 'MarineCorpsPersonalUsed';
   border: 5px solid white;
   text-align: center;
   padding: 3rem 7rem;
@@ -32,12 +27,12 @@
 }
 
 #main__page > #main__page--wrapper > #main__page--wrapper--section > #main__page--title {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 #main__page > #main__page--wrapper > #main__page--play--button {
-    margin-top: 2rem;
-    font-family: 'War Style';
-    border-radius: 0;
-    font-size: 2rem;
+  font-family: 'MarineCorpsPersonalUsed';
+  margin-top: 2rem;
+  border-radius: 0;
+  font-size: 2rem;
 }
