Fix directory structure

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #main__page {
-  background-image: url('../assets/main/main_background.jpg');
+  background-image: url('../assets/main_background.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
