--- a/css/preferences.css
+++ b/css/preferences.css
@@ -1,92 +1,15 @@
-#preferences__page {
-  background-image: url('../assets/main_background.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
+#preferences__title {
+  font-size: 3.5rem;
 }
 
-#preferences__page > #preferences__page--wrapper {
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  display: flex;
-  width: 100vw;
-}
-
-#preferences__page > #preferences__page--wrapper > #preferences__page--wrapper--section {
-  color: white;
-  font-family: 'AmericanCaptain';
-}
-
-#preferences__page > #preferences__page--wrapper > #preferences__page--wrapper--section > #preferences__page--title {
-  font-family: 'MarineCorpsPersonalUsed';
-  text-align: center;
-  font-size: 4rem;
-}
-
-#preferences__page > #preferences__page--wrapper > #preferences__page--wrapper--section > #preferences__page--form {
-  margin-top: 2rem;
-  font-size: 1rem;
-}
-
-#preferences__page
-  > #preferences__page--wrapper
-  > #preferences__page--wrapper--section
-  > #preferences__page--form
-  > .preferences__form--data {
+.preferences__form--data {
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
-#preferences__page
-  > #preferences__page--wrapper
-  > #preferences__page--wrapper--section
-  > #preferences__page--form
-  > .preferences__form--data
-  > input {
-  width: auto;
-  background-color: transparent;
-  color: #ffc107;
-  border: none;
-  border-radius: 0;
-  outline: none !important;
-  font-size: 2rem;
-  max-width: 150px;
-  box-shadow: none;
-}
-
-#preferences__page
-  > #preferences__page--wrapper
-  > #preferences__page--wrapper--section
-  > #preferences__page--form
-  > .preferences__form--data
-  > input[type='number']::-webkit-inner-spin-button,
-#preferences__page
-  > #preferences__page--wrapper
-  > #preferences__page--wrapper--section
-  > #preferences__page--form
-  > .preferences__form--data
-  > input[type='number']::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0; /* Elimina el margen por defecto en algunos navegadores */
-  color: red; /* Cambia el color de las flechas */
-}
-
-#preferences__page
-  > #preferences__page--wrapper
-  > #preferences__page--wrapper--section
-  > #preferences__page--form
-  > #preferences__page--button,
-#preferences__page
-  > #preferences__page--wrapper
-  > #preferences__page--wrapper--section
-  > #preferences__page--form
-  > #preferences__page--register {
-  margin-top: 1rem;
-  font-size: 1.5rem;
+.preferences__data {
+  text-align: end;
+  background: transparent;
+  color: var(--orange);
 }
