--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,18 @@
 }
 
 button,
-input {
+input,
+select {
   border: none;
   border-radius: 0px !important;
   outline: none !important;
+  background-color: transparent;
+}
+
+option {
+  background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  margin: auto;
 }
 
 .active {
